Fix the scrollbar of chats list

--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -86,7 +86,39 @@ aside[id="listChat"]{
     z-index: 100;
     height: 100%;
     margin-right: 0px;
+    overflow: hidden;
     /*width: 30%;*/
+}
+
+#listItemChat{
+    height: 100%;    
+    /*border: 1px solid blue;*/
+    border-top: 1px solid #e9edef;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    overflow: auto;
+
+   
+}
+
+#listItemChat{
+     /*  scroll bar for firefox*/
+
+     scrollbar-width: thin;
+     scrollbar-color: rgba(11,20,26,.2) rgba(255,255,255,.1);
+}
+
+#listItemChat::-webkit-scrollbar{
+    width: 6px;
+    height: 6px;
+}
+
+#listItemChat::-webkit-scrollbar-thumb{
+    background-color: rgba(11,20,26,.2);
+}
+
+#listItemChat::-webkit-scrollbar-track{
+    background: rgba(255,255,255,.1);
 }
 
 section[id="rightSide"]{
